2009-03-26  Elliott Baron  <ebaron@redhat.com>

	* resources/multiProcTest: New test project.
	* MultiProcessTest.java: New file.
	* AllTests.java (suite): Added MultiProcessTest.

2009-03-18  Elliott Baron  <ebaron@redhat.com>

	* BasicCachegrindTest.java (setUp): Refactoring from profiling.tests.
	* CModelLabelsTest.java (setUp): Likewise.
	* DoubleClickTest.java (setUp): Likewise.
	* LaunchConfigTabTest.java (setUp): Likewise.

2009-03-17  Elliott Baron  <ebaron@redhat.com>

	* LaunchConfigTabTest.java: New file.
	* CachegrindTestToolPage.java (checkL2Enablement): Subclassed as public.
	(checkD1Enablement): Likewise.
	(checkI1Enablement): Likewise.
	* test.xml: In cleanup change classname to cachegrind_classname.
	* DoubleClickTest.java: New file.
	* META-INF/MANIFEST.MF: New deps.	
	* AllTests.java (suite): Added DoubleClickTest and LaunchConfigTabTest.

2009-03-16  Elliott Baron  <ebaron@redhat.com>

	* CModelLabelsTest.java: New file.
	* AllTests.java (suite): New test case.
	* META-INF/MANIFEST.MF: Added cdt.ui to deps.
	* AbstractCachegrindTest.java (getFileByName): Extracted method.
	(getFunctionByName): Likewise.
	* BasicCachegrindTest.java: Likewise.

2009-03-13  Andrew Overholt  <overholt@redhat.com>

	* about.html: Initial checkin.
	* build.properties: Add test.xml, etc. to build.

2009-03-13  Andrew Overholt  <overholt@redhat.com>

	* test.xml: Initial checkin.

2009-03-12  Elliott Baron  <ebaron@redhat.com>

	* .classpath: New file.
	* .project: New file.
	* .settings/org.eclipse.jdt.core.prefs: New file.
	* build.properties: New file.
	* META-INF/MANIFEST.MF: New file.
	* plugin.properties: New file.
	* resources/cpptest/.cproject: New file.
	* resources/cpptest/.project: New file.
	* resources/cpptest/cpptest.cpp: New file.
	* resources/cpptest/cpptest.h: New file.
	* resources/cpptest/Debug: New file.
	* AbstractCachegrindTest.java: New file.
	* BasicCachegrindTest.java: New file.
	* CachegrindTestsPlugin.java: New file.