@@ -24,6 +24,7 @@ public class AllTests {
 		suite.addTestSuite(DoubleClickTest.class);
 		suite.addTestSuite(LaunchConfigTabTest.class);
 		suite.addTestSuite(MultiProcessTest.class);
+		suite.addTestSuite(ExpandCollapseTest.class);
 		//$JUnit-END$
 		return suite;
 	}
